--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/checkout@v2
         if: ${{ github.event_name != 'pull_request' }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Docker meta
         id: meta
         uses: crazy-max/ghaction-docker-meta@v2
